// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio generates a label if a child prop of text is supplied 1`] = `
.emotion-2 {
  position: relative;
}

.emotion-0 {
  width: 22px;
  height: 22px;
  fill: #757575;
}

.emotion-1 {
  width: 22px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  margin-left: 10px;
  line-height: 22px;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-2"
  >
    <test-file-stub
      aria-hidden="true"
      className="emotion-0"
    />
    <input
      checked={false}
      className="emotion-1"
      id={1}
      onChange={[Function]}
      type="radio"
    />
  </div>
  <label
    className="emotion-3"
    htmlFor={1}
  >
    Test label
  </label>
</div>
`;

exports[`Radio incorporates user styles if passed 1`] = `
.emotion-0 {
  width: 22px;
  height: 22px;
  fill: #757575;
}

.emotion-1 {
  width: 22px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background: pink;
}

.emotion-2 {
  position: relative;
  border: 2px solid purple;
}

.emotion-3 {
  margin-left: 10px;
  line-height: 22px;
  color: green;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-2"
  >
    <test-file-stub
      aria-hidden="true"
      className="emotion-0"
    />
    <input
      checked={false}
      className="emotion-1"
      id={1}
      onChange={[Function]}
      type="radio"
    />
  </div>
  <label
    className="emotion-3"
    htmlFor={1}
  >
    Test label
  </label>
</div>
`;

exports[`Radio incorporates user styles if passed 2`] = `
.emotion-2 {
  position: relative;
}

.emotion-0 {
  width: 22px;
  height: 22px;
  fill: #757575;
}

.emotion-1 {
  width: 22px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3 {
  margin-left: 10px;
  line-height: 22px;
}

<div
  className="emotion-4"
>
  <div
    className="emotion-2"
  >
    <test-file-stub
      aria-hidden="true"
      className="emotion-0"
    />
    <input
      checked={false}
      className="emotion-1"
      id={2}
      onChange={[Function]}
      type="radio"
    />
  </div>
  <label
    className="emotion-3"
    htmlFor={2}
  >
    Test label
  </label>
</div>
`;

exports[`Radio renders the correct button type 1`] = `
.emotion-2 {
  position: relative;
}

.emotion-0 {
  width: 22px;
  height: 22px;
  fill: #757575;
}

.emotion-1 {
  width: 22px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

<div
  className="emotion-2"
>
  <test-file-stub
    aria-hidden="true"
    className="emotion-0"
  />
  <input
    checked={false}
    className="emotion-1"
    id={1}
    onChange={[Function]}
    type="radio"
  />
</div>
`;

exports[`Radio renders the correct selected state 1`] = `
.emotion-2 {
  position: relative;
}

.emotion-0 {
  width: 22px;
  height: 22px;
  fill: #757575;
}

.emotion-1 {
  width: 22px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

<div
  className="emotion-2"
>
  <test-file-stub
    aria-hidden="true"
    className="emotion-0"
  />
  <input
    checked={false}
    className="emotion-1"
    id={1}
    onChange={[Function]}
    type="radio"
  />
</div>
`;

exports[`Radio renders the correct selected state 2`] = `
.emotion-2 {
  position: relative;
}

.emotion-1 {
  width: 22px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

.emotion-0 {
  width: 22px;
  height: 22px;
  fill: #43B02A;
}

<div
  className="emotion-2"
>
  <test-file-stub
    aria-hidden="true"
    className="emotion-0"
  />
  <input
    checked={true}
    className="emotion-1"
    id={2}
    onChange={[Function]}
    type="radio"
  />
</div>
`;

exports[`Radio renders the correct selected state 3`] = `
.emotion-2 {
  position: relative;
}

.emotion-1 {
  width: 22px;
  height: 22px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -ms-appearance: none;
  -moz-appearance: none;
  -webkit-appearance: none;
  background-image: none;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  cursor: pointer;
}

.emotion-0 {
  width: 22px;
  height: 22px;
  fill: #BDBDBD;
}

<div
  className="emotion-2"
>
  <test-file-stub
    aria-hidden="true"
    className="emotion-0"
  />
  <input
    checked={true}
    className="emotion-1"
    disabled={true}
    id={2}
    onChange={[Function]}
    type="radio"
  />
</div>
`;
